--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,23 @@
   ],
   "require": {
     "php": ">=5.3.9",
-    "jms/serializer": "^1.1",
     "predis/predis": "^1.0",
     "doctrine/common": "^2.6",
     "doctrine/annotations": "^1.2"
   },
+  "require-dev": {
+    "phpunit/phpunit": "5.0.*"
+  },
   "autoload": {
     "psr-4": {
       "Sportnco\\RedisORM\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Sportnco\\RedisORM\\": [
+        "Test/unit"
+      ]
     }
   }
 }
